--- a/audio.html
+++ b/audio.html
@@ -6,13 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-      <!-- <video src="mov_bbb.mp4" controls poster="imgg.jpg"></video>  -->
-   <!-- <iframe src="mov_bbb.mp4" frameborder="20"></iframe> -->
-
-    <!-- <audio src="koyal.mp3" controls muted preload=""></audio>  -->
-
-
-  <!-- <video src="mov_bbb.mp4" controls muted autoplay loop poster="imgg.jpg"></video>  -->
-    <!-- <iframe src="mov_bbb.mp4" frameborder="20"></iframe>  -->
+   <video src="mov_bbb.mp4" controls poster="imgg.jpg"></video>
+   <!-- <audio src="koyal.mp3" controls></audio> -->
 </body>
 </html>
